<resources>
    <string name="app_name">foody2</string>
    <string name="phienban">Version</string>
    <string name="dangtai">dang tai....</string>
    <string name="tencongty">hovanduong.cucdi</string>
    <string name="Email">Email</string>
    <string name="PasWord">Mật Khẩu</string>
    <string name="DangNhap">Đăng Nhập</string>
    <string name="hoac">Hoặc</string>
    <string name="facebook_app_id">675752013185899</string>
    <string name="facebook_login">Đăng Nhập FaceBook</string>
    <string name="quenmatkhau">Quên Mật Khẩu ?</string>
    <string name="dangkymoi"><u>Đăng Ký Mới</u></string>
    <string name="nhaplaimatkhau">Nhập Lại Mật Khẩu</string>
    <string name="dangky">Đăng Ký</string>
    <string name="thongbaoloidangky">Bạn Chưa Nhập</string>
    <string name="thongbaonhaplaimatkhau">Vui Lòng Nhập Giống Mật Khẩu Ở Trên</string>
    <string name="dangkythanhcong">Bạn Đã Đăng Ký Tài Khoản Thành Công</string>
    <string name="dangxuly">Đang Xử Lý</string>
    <string name="dangnhapthatbai">Tài Khoản Không Hợp Lệ</string>
    <string name="khoiphucmatkhau">Forgot password</string>
    <string name="chuoikhoiphucmatkhau">Bạn Vui Lòng Nhập Địa Chỉ Email Vào Khung Ben Dưới Để Khôi Phục Mật Khẩu</string>
    <string name="guimail">Gửi mail</string>
    <string name="chuoithanhvien">Bạn Không Phải Là Thành Viên?</string>
    <string name="thongbaoemailkhonghople">Email Không Hợp Lệ Vui Lòng Nhập Đúng Định Dạng Email</string>
    <string name="thongbaoguimailthanhcong">Vui Lòng Kiểm Tra Mail</string>
    <string name="odau">Ở Đâu</string>
    <string name="angi">Ăn Gì</string>
    <string name="moinhat">Mới Nhất</string>
    <string name="danhmuc">Danh Mục</string>
    <string name="khuvuc">Huế</string>
    <string name="gantoi">Gần tôi</string>
    <string name="giaohang">Giao hàng</string>
    <string name="gameandfun">Game And Fun</string>
    <string name="deal">Deal</string>
    <string name="blog">Blog</string>
    <string name="topmenber">Top Thành Viên</string>
    <string name="datmon">Đặt Món</string>
    <string name="taianh">Tải Ảnh</string>
    <string name="luulai">Lưu Lại</string>
    <string name="binhluan">Comment</string>
    <string name="checkin">Check</string>
    <string name="chiase">Chia sẻ</string>
    <string name="dangmocua">Đang mở cửa</string>
    <string name="dadongcua">Đã Đóng cửa</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="true">AIzaSyDVCqf9lwDEu0GumZcyzzIJcgdlMAsfvC0</string>
    <string name="capnhawifi">Cập Nhật Wifi</string>
    <string name="nhaptenwifi">Nhập tên wifi</string>
    <string name="nhapmatkhauwifi">Nhập mật khẩu wifi</string>
    <string name="dongy">Đồng Ý</string>
    <string name="loithemwifi">Vui Lòng Nhập Đầy Đủ Thông Tin Wifi</string>
    <string name="themthanhcong">Thêm thành công</string>
    <string name="thucdon">Menu </string>
    <string name="khongiaohang">Không giao hàng</string>
    <string name="giomocua">Giờ mở cửa</string>
    <string name="giodongcua">Giờ đóng cửa </string>
    <string name="luuquanan">Lưu</string>
    <string name="tenquanan">Nhập tên quán ăn</string>
    <string name="chinhanh">Chỉnh ảnh</string>
    <string name="themthucdon">Thêm thực đơn</string>
    <string name="tenmon">Tên món</string>
    <string name="giatien">Giá tiền</string>
    <string name="giatoida">Giát tối đa</string>
    <string name="giatoithieu">Giá tối thiểu</string>
    <string name="twitterUsername">\@joeytribbiani</string>
    <string name="thanhtoan">Thanh toán</string>
    <string name="dealgiamgia">Deal xịn giảm nữa</string>

    <string name="diadiem">200 dia diem</string>
    <string name="uudai">Ưu Đãi</string>

</resources>
