<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".View.DangNhapActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:background="@color/transparenBackgroundDangNhap"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparenBackgroundDangNhap"
            android:orientation="vertical"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:paddingBottom="20dp"
            android:layout_gravity="center">


            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/khoiphucmatkhau"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/chuoikhoiphucmatkhau"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="14dp" />

            <EditText
                android:id="@+id/edEmailKhoiPhucMatKhau"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="#FFFFFF"
                android:drawableLeft="@drawable/icon_adduser"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/Email"
                android:inputType="textEmailAddress"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textColorLink="#FFFFFF" />

            <Button
                android:id="@+id/btnGuiMailKhoiPhuc"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:paddingLeft="60dp"
                android:paddingRight="60dp"
                android:text="@string/guimail"
                android:textAllCaps="true"
                android:textColor="#FFFFFF" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/chuoithanhvien"
                    android:textColor="#FFFFFF" />

                <TextView
                    android:id="@+id/txtDangKyKhoiPhuc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/dangkymoi"
                    android:textAlignment="textEnd"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF" />
            </LinearLayout>

        </LinearLayout>
    </FrameLayout>

</android.widget.RelativeLayout>