<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".View.DangNhapActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparenBackgroundDangNhap"
        android:orientation="vertical"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:paddingBottom="20dp">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            app:srcCompat="@drawable/foodytext" />

        <EditText
            android:id="@+id/edEmailKhoiPhucMatKhau"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/icon_adduser"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/Email"
            android:inputType="textPersonName"
            android:backgroundTint="#FFFFFF"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textColorLink="#FFFFFF" />

        <EditText
            android:id="@+id/edPassWordDangNhap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/ic_lock_outline_white_24dp"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/PasWord"
            android:inputType="textPersonName|textPassword"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:backgroundTint="#FFFFFF"
            android:textColorLink="#FFFFFF" />

        <Button
            android:id="@+id/btnGuiMailKhoiPhuc"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:paddingLeft="60dp"
            android:paddingRight="60dp"
            android:text="@string/DangNhap"
            android:textAllCaps="false"
            android:textColor="#FFFFFF" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:orientation="horizontal"
            android:paddingTop="20dp">

            <View
                android:layout_width="236dp"
                android:layout_height="2dp"
                android:layout_weight="1"
                android:background="@color/colorAccent"></View>

            <TextView
                android:id="@+id/textView"
                android:layout_width="150dp"
                android:layout_height="5dp"
                android:layout_weight="1"
                android:text="@string/hoac" />

            <View
                android:layout_width="236dp"
                android:layout_height="2dp"
                android:layout_weight="1"
                android:background="@color/colorAccent"></View>

        </LinearLayout>

        <com.facebook.login.widget.LoginButton
            android:id="@+id/btnDangNhapFaceBook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:paddingTop="10dp"
            android:paddingBottom="15dp"></com.facebook.login.widget.LoginButton>

        <com.google.android.gms.common.SignInButton
            android:id="@+id/btnDangNhapGoogle"
            android:layout_width="match_parent"
            android:layout_height="51dp"></com.google.android.gms.common.SignInButton>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtQuenMatKhau"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/quenmatkhau"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/txtDangKyKhoiPhuc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dangkymoi"
                android:textAlignment="textEnd"
                android:textColor="#FFFFFF" />
        </LinearLayout>

    </LinearLayout>

</android.widget.RelativeLayout>