<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".View.DangNhapActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:background="@color/transparenBackgroundDangNhap"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparenBackgroundDangNhap"
            android:orientation="vertical"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:paddingBottom="20dp"
            android:layout_gravity="center">


            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                app:srcCompat="@drawable/foodytext" />

            <EditText
                android:id="@+id/edEmailKhoiPhucMatKhau"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="#FFFFFF"
                android:drawableLeft="@drawable/icon_adduser"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/Email"
                android:inputType="textEmailAddress"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textColorLink="#FFFFFF" />

            <EditText
                android:id="@+id/edPassWordDangNhap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="#FFFFFF"
                android:drawableLeft="@drawable/ic_lock_outline_white_24dp"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/PasWord"
                android:inputType="textPersonName|textPassword"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textColorLink="#FFFFFF" />

            <EditText
                android:id="@+id/edNhapLaiPassWordDK"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="#FFFFFF"
                android:drawableLeft="@drawable/ic_lock_outline_white_24dp"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/nhaplaimatkhau"
                android:inputType="textPersonName|textPassword"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textColorLink="#FFFFFF" />

            <Button
                android:id="@+id/btnGuiMailKhoiPhuc"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:paddingLeft="60dp"
                android:paddingRight="60dp"
                android:text="@string/dangky"
                android:textAllCaps="true"
                android:textColor="#FFFFFF" />

        </LinearLayout>
    </FrameLayout>

</android.widget.RelativeLayout>