<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <ImageView
            android:id="@+id/imgChupHinh"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:src="@drawable/img_mini_themhinh"
            android:scaleType="centerCrop"
            android:layout_gravity="center"
            android:paddingRight="10dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_marginTop="5dp"
            >

            <EditText
                android:id="@+id/edTenMon"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/custom_form_text"
                android:backgroundTint="#80dcdcdc"
                android:paddingLeft="10dp"
                android:inputType="text"
                android:hint="@string/tenmon"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <EditText
                    android:layout_marginTop="5dp"
                    android:id="@+id/edGiaTien"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/custom_form_text"
                    android:backgroundTint="#80dcdcdc"
                    android:paddingLeft="10dp"
                    android:layout_weight="1"
                    android:hint="@string/giatien"
                    android:inputType="number"
                    android:text="0"
                    />

                <Spinner
                    android:id="@+id/spinnerThucDon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"></Spinner>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_marginTop="10dp"
        android:id="@+id/btnThemThucDon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button_chung"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"
        android:text="@string/themthucdon"
        android:textAllCaps="false"

        />
</LinearLayout>