<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:gravity="center"
    android:padding="10dp"

    >

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="Thêm chi nhánh"
                android:textAllCaps="false"
                android:textColor="@color/colorBack"
                android:textSize="30dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edTenQuan"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/custom_form_text"
                android:backgroundTint="#80dcdcdc"
                android:hint="@string/tenquanan"
                android:paddingLeft="10dp" />

            <EditText
                android:id="@+id/edGiaToiDa"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/custom_form_text"
                android:backgroundTint="#80dcdcdc"
                android:inputType="number"
                android:paddingLeft="10dp"
                android:text="0"


                />

            <EditText
                android:id="@+id/edGiaToiThieu"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/custom_form_text"
                android:backgroundTint="#80dcdcdc"
                android:hint="@string/giatoithieu"
                android:inputType="number"
                android:paddingLeft="10dp"
                android:text="0"

                />

            <RadioGroup
                android:id="@+id/rdgTrangThai"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"

                >

                <RadioButton
                    android:id="@+id/rdGiaoHang"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/giaohang" />

                <RadioButton
                    android:id="@+id/rdKhongGiaoHang"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/khongiaohang" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnGioMoCua"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/custom_button_chung"
                    android:text="@string/giomocua"
                    android:textAllCaps="false"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnGioDongCua"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/custom_button_chung"
                    android:text="@string/giodongcua"
                    android:textAllCaps="false"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold" />

            </LinearLayout>


            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/khungTienTich"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                </LinearLayout>

            </HorizontalScrollView>


            <Spinner
                android:id="@+id/spinnerKhuVuc"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/custom_form_text"
                android:backgroundTint="#80dcdcdc">

            </Spinner>

            <ImageView
                android:id="@+id/imgHinhQuan1"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="5dp"
                android:scaleType="centerCrop"
                android:src="@drawable/img_themhinhanh" />

            <LinearLayout
                android:id="@+id/khungChuaChiNhanh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgHinhQuan2"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_mini_themhinh" />

                <ImageView
                    android:id="@+id/imgHinhQuan3"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_mini_themhinh" />

                <ImageView
                    android:id="@+id/imgHinhQuan4"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_mini_themhinh" />

                <ImageView
                    android:id="@+id/imgHinhQuan5"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_mini_themhinh" />

                <ImageView
                    android:id="@+id/imgHinhQuan6"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_mini_themhinh" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/khungChuaThucDon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </LinearLayout>

            <Button
                android:id="@+id/btnThemQuanAn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_button_chung"
                android:text="@string/luuquanan"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</FrameLayout>